# rasper-ducky

./: .gitignore  CONTRIBUTING.md  README.md  benchmark.py  interpreter.py  lexer.py  main.py  no_regex_lexer.py  parser.py  preprocessor.py  pyproject.toml
.github/: workflows
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
adafruit_hid/: keyboard.py  keyboard_layout_us.py
docs/: INSTRUCTIONS.md
interpreter/: interpreter.py  parser.py
rasper_ducky/: boot.py  code.py  keyboard.py  main.py  payload.dd  settings.toml
rasper_ducky/duckyscript/: interpreter.py  keyboard.py  lexer.py  parser.py  preprocessor.py  token.py
rasper_ducky/interpreter/: interpreter.py  lexer.py  parser.py
stubs/: base_keyboard_layout.py  base_keycode.py  board.py  digitalio.py  keyboard_layout_win_fr.py  keyboard_layout_win_it.py  keyboard_layout_win_po.py  keycode_win_cz1.py  keycode_win_da.py  storage.py  usb_hid.py
stubs/adafruit_hid/: keyboard.py  keyboard_layout_us.py  keycode.py
tests/: test_end_to_end.py  test_interpreter.py  test_lexer.py  test_parser.py  test_preprocessor.py
