[project]
name = "rasper-ducky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "black>=24.10.0",
    "mypy>=1.11.2",
    "pytest-mock>=3.14.0",
    "pytest-watcher>=0.4.3",
]
