[project]
name = "rasper-ducky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = [".", "stubs"]

[tool.pyright]
extraPaths = ["stubs", "rasper_ducky"]

[tool.mypy]
mypy_path = ["stubs", "rasper_ducky"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "mypy>=1.11.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.2",
]
